Connected socket and error retry logic

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.12.7",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "three": "^0.168.0"
   },
   "devDependencies": {
